--- a/client/style.css
+++ b/client/style.css
@@ -1,13 +1,22 @@
+*{
+    border: solid 1px red;
+}
 body {
 
     background-image: url(https://s-media-cache-ak0.pinimg.com/originals/8c/ce/af/8cceafa8f3ead61d8986e84cfe6f80de.gif);
     background-size: cover;
     height:100vh;
-    font-family: 'Indie Flower', cursive;
-    color:white;
+
 }
 h1{
+    font-family: 'Indie Flower', cursive;
+    color:white;
     font-size: 20em;
     text-align: center;
     background: linear-gradient(gold, rgba(250,250,250,0));
+    margin-top:0;
+}
+
+.main{
+    
 }
